# meli

./: Dockerfile
.github/workflows/: mayhem.yml  sync.yml
fuzz/: Cargo.toml
mayhem/: Dockerfile  Mayhemfile_envelope_parse  build.sh  test.sh
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/.cargo/: config.toml
mayhem/fuzz/fuzz_targets/: envelope_parse.rs
mayhem/testsuite/envelope_parse/: mime_encoded.eml  simple.eml
melib/src/: lib.rs  sieve.rs
melib/src/utils/: parsec.rs
src/: terminal.rs
